Cabecera en nueva Rama

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Cabecera principal</h1>
     <h2>Esto es otra cabecera</h2>
+
+    <h3>Cabecera desde novaRama</h3>
 </body>
 </html>
